src/Components/Game/Game.css
.Game {
  background-color: #282c34;
  min-height: 100vh;
  font-family: monospace;
  padding-top: 10px;
}

.header {
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.tool-name {
  font-size: calc(10px + 2vmin);
  color: white;
  padding-left: 10%;
  padding-bottom: 10px;
  border: solid;
}

.container-interact {
  display: inline-flex;
  min-width: 90%;
  border: solid;
  border-color: white;
  justify-content:space-between;
}

.missing-info {
  display: grid;
  grid-template-rows: repeat(3, 100px);
  gap: 10px;
  grid-auto-flow: column;
  grid-auto-rows: 600px 500px;

  font-size: calc(8px + 1.5vmin);
  color: white;
  margin-left: 12%;
  padding-right: 10%;
  border: solid;
}

.item {
  margin: 16px 0px;
  border: solid;
  border-color: white;
}

.button-wrapper { 
  border: solid;
  border-color: aliceblue;
}

.gamebutton {
  font-family: monospace;
  display: inline;
  border-radius: 4px;
  border: none;
  color: white;
  text-align: center;
  font-size: calc(10px + 2vmin);
  padding: 30px;
  height: 150px;
  width: 270px;
  transition: all 0.5s;
  cursor: pointer;
  margin: 15px;
}

.gamebutton span {
  cursor: pointer;
  display: inline-block;
  position: relative;
  transition: 0.5s;
}

.gamebutton span:after {
  content: '\00bb';
  position: absolute;
  opacity: 0;
  top: 0;
  right: -20px;
  transition: 0.5s;
}

.gamebutton:hover span {
  padding-right: 25px;
}

.gamebutton:hover span:after {
  opacity: 1;
  right: 0;
}

.webpage {
  margin-left: 11%;
  width: min(80%, 1500px);
  height: 600px;
}

.resizer {
  display:flex;
  resize:both;
  overflow:hidden;
}

.resizer > .resized {
  flex-grow:1;
  border:0 }

